New configuration files for UI tests. It's possible to merge custom config with values from app.config read by default by SharedVariables.

--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -298,6 +298,7 @@
     <Compile Include="Models\DocumentsTestData.cs" />
     <Compile Include="Models\FolderWithDocuments.cs" />
     <Compile Include="ObjectType.cs" />
+    <Compile Include="TestException.cs" />
     <Compile Include="Permission.cs" />
     <Compile Include="Models\ImportOverwriteMode.cs" />
     <Compile Include="Models\FieldOverlayBehavior.cs" />
