--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
@@ -345,21 +345,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
-    <None Include="oi\unmanaged\oilink.exe" />
-    <None Include="oi\unmanaged\oilink.jar" />
-    <None Include="oi\unmanaged\sccca-R1.dll" />
-    <None Include="oi\unmanaged\sccch-R1.dll" />
-    <None Include="oi\unmanaged\sccda-R1.dll" />
-    <None Include="oi\unmanaged\sccex-R1.dll" />
-    <None Include="oi\unmanaged\sccfa-R1.dll" />
-    <None Include="oi\unmanaged\sccfi-R1.dll" />
-    <None Include="oi\unmanaged\sccfmt-R1.dll" />
-    <None Include="oi\unmanaged\sccfnt-R1.dll" />
-    <None Include="oi\unmanaged\sccfut-R1.dll" />
-    <None Include="oi\unmanaged\sccind-R1.dll" />
-    <None Include="oi\unmanaged\scclo-R1.dll" />
-    <None Include="oi\unmanaged\sccut-R1.dll" />
-    <None Include="oi\unmanaged\wvcore-R1.dll" />
+    <Content Include="oi\unmanaged\oilink.exe" />
+    <Content Include="oi\unmanaged\oilink.jar" />
+    <Content Include="oi\unmanaged\sccca-R1.dll" />
+    <Content Include="oi\unmanaged\sccch-R1.dll" />
+    <Content Include="oi\unmanaged\sccda-R1.dll" />
+    <Content Include="oi\unmanaged\sccex-R1.dll" />
+    <Content Include="oi\unmanaged\sccfa-R1.dll" />
+    <Content Include="oi\unmanaged\sccfi-R1.dll" />
+    <Content Include="oi\unmanaged\sccfmt-R1.dll" />
+    <Content Include="oi\unmanaged\sccfnt-R1.dll" />
+    <Content Include="oi\unmanaged\sccfut-R1.dll" />
+    <Content Include="oi\unmanaged\sccind-R1.dll" />
+    <Content Include="oi\unmanaged\scclo-R1.dll" />
+    <Content Include="oi\unmanaged\sccut-R1.dll" />
+    <Content Include="oi\unmanaged\wvcore-R1.dll" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
@@ -368,7 +368,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="oi\unmanaged\cmmap000.bin" />
+    <Content Include="oi\unmanaged\cmmap000.bin" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
