replaced content with none in web project - oi

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -833,24 +833,24 @@
     <Content Include="..\Dependencies\kCura.FluidUI.Widgets.1.1.306\css\fonts\fluid-ui.woff">
       <Link>Content\fonts\fluid-ui.woff</Link>
     </Content>
-    <Content Include="oi\unmanaged\cmmap000.bin" />
+    <None Include="oi\unmanaged\cmmap000.bin" />
     <None Include="Properties\PublishProfiles\default.pubxml" />
     <Content Include="LICENSE.txt" />
-    <Content Include="oi\unmanaged\oilink.exe" />
-    <Content Include="oi\unmanaged\oilink.jar" />
-    <Content Include="oi\unmanaged\sccca-R1.dll" />
-    <Content Include="oi\unmanaged\sccch-R1.dll" />
-    <Content Include="oi\unmanaged\sccda-R1.dll" />
-    <Content Include="oi\unmanaged\sccex-R1.dll" />
-    <Content Include="oi\unmanaged\sccfa-R1.dll" />
-    <Content Include="oi\unmanaged\sccfi-R1.dll" />
-    <Content Include="oi\unmanaged\sccfmt-R1.dll" />
-    <Content Include="oi\unmanaged\sccfnt-R1.dll" />
-    <Content Include="oi\unmanaged\sccfut-R1.dll" />
-    <Content Include="oi\unmanaged\sccind-R1.dll" />
-    <Content Include="oi\unmanaged\scclo-R1.dll" />
-    <Content Include="oi\unmanaged\sccut-R1.dll" />
-    <Content Include="oi\unmanaged\wvcore-R1.dll" />
+    <None Include="oi\unmanaged\oilink.exe" />
+    <None Include="oi\unmanaged\oilink.jar" />
+    <None Include="oi\unmanaged\sccca-R1.dll" />
+    <None Include="oi\unmanaged\sccch-R1.dll" />
+    <None Include="oi\unmanaged\sccda-R1.dll" />
+    <None Include="oi\unmanaged\sccex-R1.dll" />
+    <None Include="oi\unmanaged\sccfa-R1.dll" />
+    <None Include="oi\unmanaged\sccfi-R1.dll" />
+    <None Include="oi\unmanaged\sccfmt-R1.dll" />
+    <None Include="oi\unmanaged\sccfnt-R1.dll" />
+    <None Include="oi\unmanaged\sccfut-R1.dll" />
+    <None Include="oi\unmanaged\sccind-R1.dll" />
+    <None Include="oi\unmanaged\scclo-R1.dll" />
+    <None Include="oi\unmanaged\sccut-R1.dll" />
+    <None Include="oi\unmanaged\wvcore-R1.dll" />
     <Content Include="Scripts\core\messaging.js" />
     <Content Include="Scripts\es5-shim.js" />
     <Content Include="Scripts\es5-shim.min.js" />
