--- a/Source/kCura.IntegrationPoints.UITests/packages.config
+++ b/Source/kCura.IntegrationPoints.UITests/packages.config
@@ -15,6 +15,8 @@
   <package id="Relativity.Kepler.Client" version="1.0.1.409" targetFramework="net462" />
   <package id="Relativity.Logging" version="9.4.308" targetFramework="net462" />
   <package id="Relativity.Logging.Interfaces" version="9.4.308" targetFramework="net462" />
+  <package id="Relativity.Services.DataContracts" version="9.6.12.15" targetFramework="net462" />
+  <package id="Relativity.Services.Interfaces" version="9.6.12.15" targetFramework="net462" />
   <package id="Selenium.Support" version="3.8.0" targetFramework="net462" />
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net462" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.34.0" targetFramework="net462" />
