--- a/Source/kCura.IntegrationPoints.Agent.Tests/kCura.IntegrationPoints.Agent.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Agent.Tests/kCura.IntegrationPoints.Agent.Tests.csproj
@@ -341,11 +341,8 @@
     <Compile Include="Tasks\SyncManagerTests.cs" />
     <Compile Include="Tasks\SyncWorkerTests.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="oi\unmanaged\cmmap000.bin" />
