--- a/Source/kCura.IntegrationPoints.EventHandlers.Tests.Integration/kCura.IntegrationPoints.EventHandlers.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.EventHandlers.Tests.Integration/kCura.IntegrationPoints.EventHandlers.Tests.Integration.csproj
@@ -460,11 +460,8 @@
     <Compile Include="IntegrationPoints\DeleteIntegrationPointsTests.cs" />
     <Compile Include="ViewErrors.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoint.Tests.Core\kCura.IntegrationPoint.Tests.Core.csproj">
