--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
@@ -296,11 +296,8 @@
       <DependentUpon>ExpectedOutput.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoint.Tests.Core\kCura.IntegrationPoint.Tests.Core.csproj">
