--- a/Source/kCura.IntegrationPoints.ImportProvider.Tests.Integration/kCura.IntegrationPoints.ImportProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Tests.Integration/kCura.IntegrationPoints.ImportProvider.Tests.Integration.csproj
@@ -230,11 +230,8 @@
       <Name>kCura.ScheduleQueue.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
