--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration.csproj
@@ -137,11 +137,8 @@
     <None Include="packages.config" />
     <Compile Include="RdoSynchronizerTest.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoint.Tests.Core\kCura.IntegrationPoint.Tests.Core.csproj">
