--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests/kCura.IntegrationPoints.Synchronizers.RDO.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests/kCura.IntegrationPoints.Synchronizers.RDO.Tests.csproj
@@ -261,11 +261,8 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="oi\unmanaged\cmmap000.bin" />
