--- a/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Web.Tests.Integration/kCura.IntegrationPoints.Web.Tests.Integration.csproj
@@ -115,11 +115,8 @@
     </Compile>
     <Compile Include="Controllers\SavedSearchQueryTests.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
