--- a/Source/kCura.ScheduleQueue.AgentBase.Tests/kCura.ScheduleQueue.AgentBase.Tests.csproj
+++ b/Source/kCura.ScheduleQueue.AgentBase.Tests/kCura.ScheduleQueue.AgentBase.Tests.csproj
@@ -140,11 +140,8 @@
     </Compile>
     <Compile Include="ScheduleQueueAgentBaseTests.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
