--- a/Source/kCura.ScheduleQueue.Core.Tests.Integration/kCura.ScheduleQueue.Core.Tests.Integration.csproj
+++ b/Source/kCura.ScheduleQueue.Core.Tests.Integration/kCura.ScheduleQueue.Core.Tests.Integration.csproj
@@ -88,11 +88,8 @@
     <Compile Include="Service\JobServiceTests.cs" />
     <Compile Include="TestDBContextHelper.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
