--- a/Source/kCura.ScheduleQueue.Core.Tests/kCura.ScheduleQueue.Core.Tests.csproj
+++ b/Source/kCura.ScheduleQueue.Core.Tests/kCura.ScheduleQueue.Core.Tests.csproj
@@ -104,11 +104,8 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config.akelenzon">
