--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -3,40 +3,43 @@
 	<configSections>
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
+	<kCura.Config>
+		<add key="connectionString" value="data source=CD-SUT-COV1JK8Z\EDDSINSTANCE001;initial catalog=EDDS;persist security info=False;user id=MOJUSER;password=MOJEHASLO; workstation id=localhost;packet size=4096"/>
+	</kCura.Config>
 	<appSettings>
-		
-		<!-- dev-box machine specific settings-->
+				
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="localhost" />
-		<add key="targetDbHost" value="localhost" />
-		<!-- change above to <add key="targetHost" value="your_testvm.kcura.corp" />-->
-		<add key="databasePassword" value="MySqlPassword123" />
-	    
-		<!-- ========== UI tests ========== -->
-		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
-		<add key="ui.implicitWaitInSec" value="30" />
-		<!-- Time after tests assume there won't be more ajax calls after page loading -->
-		<add key="ui.waitForAjaxCallsInSec" value="3" />
-		<!-- Total time to wait for page to load -->
-		<add key="ui.waitForPageInSec" value="90" />
-		<!-- === End of UI tests ========== -->
+		<!-- Set by jeeves on CI -->
+		<add key="ServerBindingType" value="https" />
+		<!-- change to <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
+		<add key="RelativityInstanceAddress" value="localhost" />
+		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001"/>
 
-		<!-- Service Bus specific app setings for messaging connections -->
-		<add key="relativityUserName" value="relativity.admin@kcura.com" />
-		<add key="relativityPassword" value="Test1234!" />
-		<add key="databaseUserId" value="EDDSdbo" />
-		<add key="connectionStringEDDS" value="data source={0}\EDDSINSTANCE001;initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
-		<add key="connectionStringWorkspace" value="data source={1}\EDDSINSTANCE001; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
+		<!-- If empty, application uses the value of RelativityInstanceAddress -->
+		<add key="targetDbHost" value="" />
+		<add key="RESTServerAddress" value="" />
+		<add key="RSAPIServerAddress" value="" />
+		
+		<add key="AdminUsername" value="relativity.admin@kcura.com" />
+		<add key="AdminPassword" value="Test1234!" />
 		<add key="relativityUserFirstName" value="Relativity" />
 		<add key="relativityUserLastName" value="Admin" />
-		<add key="keplerTimeout" value="600" />
+
+		<add key="SQLUsername" value="EDDSdbo" />
+		<add key="SQLPassword" value="MySqlPassword123" />
+		<add key="connectionStringEDDS"      value="data source={0}; initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
+		<add key="connectionStringWorkspace" value="data source={1}; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />		
+
+		<add key="keplerTimeout" value="1000" />
 		<add key="buildPackages" value="\\bld-pkgs.kcura.corp\Packages\IntegrationPoints" />
 		<add key="branch" value="develop" />
 		<add key="applicationPath" value="RAP" />
 		<add key="applicationRapFileName" value="RelativityIntegrationPoints.Auto.rap" />
+
 		<add key="ldapConnectionPath" value="kcura.corp/OU=Employees,OU=Accounts,OU=kCura,DC=kCura,DC=corp" />
 		<add key="ldapUsername" value="kcura\tv" />
 		<add key="ldapPassword" value="kCuraM0bileTelevision$" />
+
 		<add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
 		<add key="ClientSettingsProvider.ServiceUri" value="" />
 		<add key="SavedSearchArtifactName" value="All Documents" />
@@ -47,7 +50,19 @@
 		<add key="DestinationPath" value="c:\RIP_ExportTest" />
 		<add key="InputFolder" value="c:\RIP_ImportTest" />
 		<add key="UseLocalRAP" value="true" />
-		<add key="LocalRAPFileLocation" value="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap" />
+		<add key="LocalRAPFileLocation" value=".\Applications\RelativityIntegrationPoints.Auto.rap" />
+		<add key="JenkinsBuildUseIPRapFile" value="JenkinsUseIPRapFile" />
+		<add key="UseLegacyTemplateName" value="JenkinsUseLegacyTemplateNameInTests"/>
+
+		<!-- ========== UI tests ========== -->
+		<!-- Time of implicit wait for web element to be present on page, used by driver's Find(), [FindsBy], etc. -->
+		<add key="ui.implicitWaitInSec" value="30" />
+		<!-- Time after tests assume there won't be more ajax calls after page loading -->
+		<add key="ui.waitForAjaxCallsInSec" value="3" />
+		<!-- Total time to wait for page to load -->
+		<add key="ui.waitForPageInSec" value="90" />
+		<!-- === End of UI tests ========== -->
+
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -109,11 +124,11 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="kCura.Image.Viewer" publicKeyToken="78cb9311e6f3ec3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.5.393.22" newVersion="9.5.393.22" />
+				<bindingRedirect oldVersion="0.0.0.0-9.5.357.82" newVersion="9.5.357.82" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="kCura.Print" publicKeyToken="2cc1b8ab562ca316" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.5.393.22" newVersion="9.5.393.22" />
+				<bindingRedirect oldVersion="0.0.0.0-9.5.357.82" newVersion="9.5.357.82" />
 			</dependentAssembly>			
 		</assemblyBinding>
 	</runtime>
