--- a/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration.csproj
@@ -143,11 +143,8 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
