--- a/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests/kCura.IntegrationPoints.DocumentTransferProvider.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests/kCura.IntegrationPoints.DocumentTransferProvider.Tests.csproj
@@ -225,11 +225,8 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
