--- a/source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
+++ b/source/kCura.IntegrationPoints.Agent.Tests.Integration/kCura.IntegrationPoints.Agent.Tests.Integration.csproj
@@ -501,11 +501,8 @@
     <Compile Include="SendEmailManagerTests.cs" />
     <Compile Include="TaskFactoryTestsForOtherProviders.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\Release\app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoint.Tests.Core\kCura.IntegrationPoint.Tests.Core.csproj">
