REL-194236 Add additional references to OAuth2Client for failing Integration tests

--- a/Source/kCura.IntegrationPoints.Data.Tests.Integration/packages.config
+++ b/Source/kCura.IntegrationPoints.Data.Tests.Integration/packages.config
@@ -42,6 +42,7 @@
   <package id="Relativity.Kepler.Client" version="1.0.1.409" targetFramework="net462" />
   <package id="Relativity.Logging" version="9.4.308" targetFramework="net462" />
   <package id="Relativity.Logging.Interfaces" version="9.4.308" targetFramework="net462" />
+  <package id="Relativity.OAuth2Client.Interfaces" version="1.0.23" targetFramework="net462" />
   <package id="Relativity.SecretCatalog" version="1.0.19" targetFramework="net462" />
   <package id="Relativity.SecretCatalog.AzureKeyVault" version="1.0.19" targetFramework="net462" />
   <package id="Relativity.ServiceBus" version="2.2.5" targetFramework="net462" />
