--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -12,7 +12,7 @@
 		<!-- Set by jeeves on CI -->
 		<add key="ServerBindingType" value="https" />
 		<!-- change to <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
-		<add key="RelativityInstanceAddress" value="localhost" />
+		<add key="RelativityInstanceAddress" value="il1ddmlpl5wb001.kcura.corp" />
 		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001"/>
 
 		<!-- If empty, application uses the value of RelativityInstanceAddress -->
