--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-A.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-A.config
@@ -5,11 +5,15 @@
 	</configSections>
 	<appSettings>
 		<add key="ProtocolVersion" value="https" />
-		<add key="targetHost" value="reg-a.r1.kcura.com" />
+		<add key="RelativityInstanceAddress" value="regression-a-services.r1.kcura.com" />		
+		<add key="targetHost" value="regression-a.r1.kcura.com" />
 		<add key="targetDbHost" value="TBD" />
+		
 		<add key="databasePassword" value="P@ssw0rd@1" />
-	    
-		<add key="relativityUserName" value="RIP.Test@relativity.com" />
+
+		<add key="AdminUsername" value="changeme@relativity.com" />
+		<add key="AdminPassword" value="Test1234!" />
+		<add key="relativityUserName" value="changeme@relativity.com" />
 		<add key="relativityPassword" value="Test1234!" />
 		<add key="databaseUserId" value="EDDSdbo" />
 		<add key="connectionStringEDDS" value="data source=TBD;initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
