--- a/Source/kCura.IntegrationPoints.DocumentTransferProvider/kCura.IntegrationPoints.DocumentTransferProvider.csproj
+++ b/Source/kCura.IntegrationPoints.DocumentTransferProvider/kCura.IntegrationPoints.DocumentTransferProvider.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
