--- a/Source/kCura.IntegrationPoints.Email.Tests/kCura.IntegrationPoints.Email.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Email.Tests/kCura.IntegrationPoints.Email.Tests.csproj
@@ -17,6 +17,7 @@
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
     <TargetFrameworkProfile />
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
     <DebugSymbols>true</DebugSymbols>
