--- a/Source/kCura.IntegrationPoints.EventHandlers.Tests/kCura.IntegrationPoints.EventHandlers.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.EventHandlers.Tests/kCura.IntegrationPoints.EventHandlers.Tests.csproj
@@ -18,6 +18,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
