--- a/Source/kCura.IntegrationPoints.Injection/kCura.IntegrationPoints.Injection.csproj
+++ b/Source/kCura.IntegrationPoints.Injection/kCura.IntegrationPoints.Injection.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup>
     <DebugSymbols>true</DebugSymbols>
