--- a/Source/kCura.IntegrationPoints.Management/kCura.IntegrationPoints.Management.csproj
+++ b/Source/kCura.IntegrationPoints.Management/kCura.IntegrationPoints.Management.csproj
@@ -10,6 +10,7 @@
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <OutputPath>..\bin\$(Configuration)\</OutputPath>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
