--- a/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>kCura.IntegrationPoints.Services.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
