--- a/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
+++ b/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
@@ -11,6 +11,7 @@
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <OutputPath>..\bin\$(Configuration)\</OutputPath>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
