--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Models\ExportToLoadFileOutputSettingsModel.cs" />
     <Compile Include="Models\ExportToLoadFileTextOptionsModel.cs" />
     <Compile Include="Models\FolderWithDocuments.cs" />
+    <Compile Include="Models\ImportFromFTPModel.cs" />
     <Compile Include="Models\IntegrationPointGeneralModel.cs" />
     <Compile Include="Models\JobHistoryModel.cs" />
     <Compile Include="Models\RelativityProviderModel.cs" />
